--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-router-dom": "^5.1.6",
     "@types/redux": "^3.6.0",
     "@types/uuid": "^8.3.0",
+    "axios": "^0.21.1",
     "gh-pages": "^3.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -24,8 +25,10 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "redux-ts": "^4.3.0",
     "typescript": "~3.7.2",
+    "typescript-fsa-redux-thunk": "^2.10.1",
     "typescript-react-storybook": "0.0.3",
     "uuid": "^8.3.0"
   },
